--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Canvas Video Player with effects</title>
+    <title>Canvas Video Player with filters</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <div class="video-container">
       <video id="video" controls>
-        <source src="trailer.mp4" type='video/mp4'>
+        <source src="data/trailer.mp4" type='video/mp4'>
       </video>
     </div>
     <script src="src/index.js"></script>
@@ -25,7 +25,7 @@
         }
       }
 
-      new CanvasPlayer('video', negative);
+      new FilterPlayer('video', negative);
     </script>
   </body>
 </html>
