Add eslint, prettier, webpack and other stuff

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,10 @@
   <body>
     <div class="video-container">
       <video id="video" controls>
-        <source src="data/trailer.mp4" type='video/mp4'>
+        <source src="./trailer.mp4" type='video/mp4'>
       </video>
     </div>
-    <script src="src/index.js"></script>
+    <script src="../dist/bundle.js"></script>
     <script>
       function negative(pixels) {
         const data = pixels.data;
