--- a/demo/index.html
+++ b/demo/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <div class="video-container">
-      <video id="video" controls>
+      <video id="video" controls poster="./poster.png">
         <source src="./trailer.mp4" type='video/mp4'>
       </video>
     </div>
     <script src="../dist/filters.js"></script>
     <script src="../dist/bundle.js"></script>
     <script>
-      new FVPlayer('video', FVPFilters.negative);
+      new FVPlayer('video', FVPFilters.greyscale);
     </script>
   </body>
 </html>
