Update dist builds

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,8 @@
         <source src="./trailer.mp4" type='video/mp4'>
       </video>
     </div>
-    <script src="../dist/filters.js"></script>
-    <script src="../dist/bundle.js"></script>
+    <script src="../dist/fvfilters.js"></script>
+    <script src="../dist/fvplayer.js"></script>
     <script>
       new FVPlayer('video', FVPFilters.greyscale);
     </script>
