--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>A simple canvas video player with prebuilt filters</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="video-container">
-      <video id="video" controls poster="./poster.png">
-        <source src="./trailer.mp4" type='video/mp4'>
-      </video>
-    </div>
+    <video id="video" controls poster="./poster.png">
+      <source src="./trailer.mp4" type='video/mp4'>
+    </video>
     <script src="../dist/fvfilters.js"></script>
     <script src="../dist/fvplayer.js"></script>
     <script>
